Upstream catch-up

--- a/mq/AUTHORS
+++ b/mq/AUTHORS
@@ -1,4 +1,4 @@
 Flopsy Authors:
 * Nathan Borror <nathan@playgroundblues.com>
 * Eric Florenzano <floguy@gmail.com>
-* Bohdan Mushkevych <bmushkevych@reinvent.com>
+* Bohdan Mushkevych <mushkevych@gmail.com>
